add_library (rffalcon vec.hpp
					  AffinePoint.cpp AffinePoint.hpp
					  AffineVector.cpp AffineVector.hpp
					  Block.cpp Block.hpp
					  Matrix3x3.cpp Matrix3x3.hpp
					  Matrix4x4.cpp Matrix4x4.hpp
					  ModelBase.cpp ModelBase.hpp
					  PhongMaterial.cpp PhongMaterial.hpp
					  TextureAtlas.cpp TextureAtlas.hpp
					  TextureFont.cpp TextureFont.hpp
					  VertexBuffer.cpp VertexBuffer.hpp
					  VertexAttribute.cpp VertexAttribute.hpp)
